--- a/css/styles.css
+++ b/css/styles.css
@@ -8,20 +8,52 @@
     --primary-font: 'Roboto', sans-serif;
     --secondary-font: 'Raleway', sans-serif;
 }
+*{
+    margin: 0;
+    padding: 0;
+}
 
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+html{
+    box-sizing: border-box;
+
+}
+
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
 /* Body section style*/
 
 .body{
     font-family: var(--primary-font);
     background-color: var(--white);
-    text-align: center;
 
 }
 
 /* Header section style*/
 .header {
-    background-color: var(--white);
+    display: flex;
+    padding: 24px 215px;
 }
+
+.header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    
+}
+
 .header__logo{
     text-decoration: none;
     font-family: var(--secondary-font);
@@ -29,6 +61,7 @@
     font-size: 26px;
     line-height: 31px;
     color: #000000;
+    letter-spacing: 0.03em;
 
 }
 
@@ -39,6 +72,9 @@
 
 .header__navigation ul{
     list-style: none;
+    display: flex;
+    gap: 40px;
+
 
 }
 
@@ -50,6 +86,7 @@
     color: var(--black);
     list-style: none;
     text-decoration: none;
+
 }
 
 .header__navigation a:hover {
@@ -70,6 +107,7 @@
     line-height: 16px;
     color: var(--grey) ;
     text-decoration: none;
+   padding-right: 40px;
 
 }
 
@@ -87,8 +125,17 @@
 
 .hero-section{
     background-color: var(--dark-grey);
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 
 }
+.hero-section .container{
+    width: 1200px;
+   margin-left: auto;
+   margin-right: auto; 
+}
+
 
 .hero-section__title{
     font-family: var(--primary-font);
@@ -97,6 +144,9 @@
     line-height: 60px;
     text-transform: uppercase;
     color: var(--white);
+    letter-spacing: 0.06em;
+    margin-top: 200px;
+
     
 }
 .hero-section__title:hover{
@@ -114,6 +164,8 @@
     background-color: var(--light-blue);
     cursor: pointer;
     border-radius: 4px;
+    margin-top: 30px;
+    margin-bottom: 210px;
     
 }
 
@@ -126,11 +178,19 @@
 /*About section style*/
 
 .about{
+    margin: 94px 215px;
+}
+.about .container{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+   gap: 30px;
    
 }
 
 .about__list{
-    list-style: none;
+    list-style: none;    
 }
 
 .about__subtitle{
@@ -141,6 +201,9 @@
     text-transform: uppercase;
     color: var(--black);
     list-style: none;
+    letter-spacing: 0.03em;
+    margin-bottom: 10px;
+    text-align: left;
 
 }
 
@@ -150,23 +213,50 @@
     font-size: 14px;
     line-height: 24px;
     color: var(--grey);
+    letter-spacing: 0.03em;
+    text-align: left;
+    margin-top: 10px;
 
 }
 
 /* What we do style*/
-
+.occupation{
+    margin: 94px 215px;
+    
+}
+.occupation__images{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    gap:30px;
+}
+.occupation__image{
+    width: 370px;
+    height: 294px;
+}
 .occupation__subtitle{
     font-family: var(--primary-font);
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
     color: var(--black);
+    letter-spacing: 0.03em;
+    margin-bottom: 50px
+
 
 }
 
 /* Team section style*/
 
 .team{
+    margin: 94px 215px;
+}
+
+.team .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 
 }
 
@@ -176,16 +266,28 @@
     font-size: 36px;
     line-height: 42px;
     color: var(--black);
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+    flex: 1;
 
 }
-
+.team__image{
+    width: 270px;
+    height: 260px;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    gap:30px;
+}
 
 .team__name{
     font-family: var(--primary-font);
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
-    color: var(--black)
+    color: var(--black);
+    letter-spacing: 0.03em;
+    margin-top: 30px;
 }
 
 .team__job{
@@ -194,6 +296,9 @@
     font-size: 16px;
     line-height: 19px;
     color: var(--grey);
+    letter-spacing: 0.03em;
+    margin-top: 10px;
+    margin-bottom: 30px;
 
 }
 
@@ -201,6 +306,9 @@
 
 .footer{
     background-color: var(--dark-grey);
+    display: flex;
+   justify-content: space-between;
+    padding: 60px 1240px 60px 215px;
 }
 
 .footer__logo{
@@ -210,6 +318,8 @@
     line-height: 31px;
     color: var(--white);
     text-decoration: none;
+    letter-spacing: 0.03em;
+    align-items: flex-start;
 }
 
 .footer__logo__name{
@@ -225,11 +335,22 @@
     line-height: 16px;
     color: var(--white);
     text-decoration: none;
+    letter-spacing: 0.03em;
+    margin-top: 28px;
+    
+  
 
 }
+.contact-mail{
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
 .contact a{
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
+
+    
 }
 .contact a:hover {
     color: var(--light-blue);
@@ -240,6 +361,13 @@
     color: var(--light-blue);
     border-bottom: none;
 }
+
+
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+ }
 
 
 /* Body section portfolio style*/
