--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,12 @@
     --primary-font: 'Roboto', sans-serif;
     --secondary-font: 'Raleway', sans-serif;
 }
-*{
+*, *::before, *::after{
     margin: 0;
     padding: 0;
 }
 
 img{
-    display: block;
     max-width: 100%;
     height: auto;
 }
@@ -32,35 +31,33 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
+.container{
+    width: 1200px;
+    margin: 0 auto;
+ }
 /* Body section style*/
 
 .body{
     font-family: var(--primary-font);
     background-color: var(--white);
+    color: var(--black);
 
 }
-
-.container{
-    width: 1200px;
-    margin: auto;
- }
 
 /* Header section style*/
 .header {
     background-color: var(--white);
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-top: none;
+    border-right: none;
+    border-left: none;
     padding: 24px 215px;
     border-bottom: 1px solid #ececec;
-}
 
-.header .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    
 }
-
 
 .header__logo{
     text-decoration: none;
@@ -78,9 +75,9 @@ a{
 
 }
 
-.header__navigation ul{
+.header__navigation{
     list-style: none;
-    display: flex;
+    display: inline-block;
     gap: 40px;
 }
 
@@ -115,6 +112,7 @@ a{
     text-decoration: none;
     padding-right: 40px;
 
+
 }
 
 .header__info a:hover{
@@ -133,6 +131,7 @@ a{
     background-color: var(--dark-grey);
     display: flex;
     align-items: center;
+    text-align: center;
     flex-wrap: wrap;
 
 }
@@ -178,19 +177,18 @@ a{
 /*About section style*/
 
 .about{
-    margin: 94px 215px;
-}
-.about .container{
    display: flex;
-   justify-content: space-between;
+   flex-direction: row;
+   justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    gap: 30px;
-   
+    
 }
 
 .about__list{
-    list-style: none;    
+    list-style: none;
+
 }
 
 .about__subtitle{
@@ -202,8 +200,10 @@ a{
     color: var(--black);
     list-style: none;
     letter-spacing: 0.03em;
-    margin-bottom: 10px;
     text-align: left;
+    margin-top: 94px;
+    margin-bottom: 10px;
+    
 
 }
 
@@ -214,14 +214,14 @@ a{
     line-height: 24px;
     color: var(--grey);
     letter-spacing: 0.03em;
-    text-align: left;
-    margin-top: 10px;
+    text-align: left;                                   
 
 }
 
 /* What we do style*/
 .occupation{
     margin: 94px 215px;
+    text-align: center;
     
 }
 .occupation__images{
@@ -241,8 +241,7 @@ a{
     line-height: 42px;
     color: var(--black);
     letter-spacing: 0.03em;
-    margin-bottom: 50px
-
+    margin-bottom: 50px;
 
 }
 
@@ -250,14 +249,10 @@ a{
 
 .team{
     margin: 94px 215px;
-}
-
-.team .container{
-    display: flex;
-    justify-content: space-between;
+    display: inline;
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-
+    text-align: center;
 }
 
 .team__subtitle{
@@ -268,7 +263,8 @@ a{
     color: var(--black);
     letter-spacing: 0.03em;
     margin-bottom: 50px;
-    flex: 1;
+    
+    
 
 }
 .team__image{
@@ -278,6 +274,7 @@ a{
     flex: 1;
     justify-content: center;
     gap:30px;
+    
 }
 
 .team__name{
@@ -306,10 +303,16 @@ a{
 
 .footer{
     background-color: var(--dark-grey);
-    display: flex;
-    justify-content: space-between;
-    padding: 60px 1240px 60px 215px;
-    text-align: start;
+    color: var(--white);
+    display: inline-block;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 215px;
+    height: auto;
+    width: 1200px;
+    align-items: center;
+   
 }
 
 .footer__logo{
@@ -320,83 +323,76 @@ a{
     color: var(--white);
     text-decoration: none;
     letter-spacing: 0.03em;
-    align-items: flex-start;
+    text-align: left;
+    
+    
 }
 
 .footer__logo__name{
     color: #2196f3;
 
 }
-
-.contact{
-    font-family: var(--primary-font);
+.contacts{
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: var(--white);
-    text-decoration: none;
-    letter-spacing: 0.03em;
-    margin-top: 28px;
-    
-  
+}  
+
+.road{
+font-family: var(--primary-font);
+font-weight: 400;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+color: var(--white); 
+padding-top: 28px;
+
 
 }
-.contact-mail{
+.mail, .phone{
     margin-top: 12px;
-    margin-bottom: 12px;
-}
-
-.contact a{
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
-
-    
+ 
 }
-.contact a:hover {
+
+.mail:hover, .phone:hover {
     color: var(--light-blue);
 }
 
 
-.contact a:focus{
+.mail:focus, .phone:focus{
     color: var(--light-blue);
     border-bottom: none;
 }
 
 
+
+
 .container{
     width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
  }
-
 
 /* Body section portfolio style*/
 
 .body{
     font-family: var(--primary-font);
     background-color: var(--white);
-    text-align: center;
+    color: var(--black);
 }
 
-.container{
-    width: 1200px;
-    margin: auto;
- }
+
 /* Header section style*/
 .header {
     background-color: var(--white);
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-top: none;
+    border-right: none;
+    border-left: none;
     padding: 24px 215px;
     border-bottom: 1px solid #ececec;
-}
 
-.header .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    
 }
 
 .header__logo{
@@ -406,6 +402,7 @@ a{
     font-size: 26px;
     line-height: 31px;
     color: #000000;
+    letter-spacing: 0.03em;
 
 }
 
@@ -418,7 +415,6 @@ a{
     list-style: none;
     display: flex;
     gap: 40px;
-
 }
 
 .header__navigation a{
@@ -429,11 +425,13 @@ a{
     color: var(--black);
     list-style: none;
     text-decoration: none;
+
 }
 
 .header__navigation a:hover {
     color: var(--light-blue);
 }
+
 
 
 .header__navigation a:focus{
@@ -461,96 +459,94 @@ a{
     color: var(--light-blue);
     border-bottom: none;
 }
-
 /* Main part website page style*/
 
-.projects .container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-left: 215px;
-    border-bottom: 1px solid #eeeeee;
-}
-.projects-section{
-    border: 1px solid #eeeeee;
-}
 .projects__menu{
-    font-family: var(--primary-font);
-    font-size: 16px;
-    background-color: var(--dark-white);
-    color: var(--black);
-    letter-spacing: 0.03em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 50px;
-    margin-top: 94px;
-    padding-left: 215px;
-    display: inline-flex;
-    gap: 8px;
-
+    padding-top: 94px;
+    list-style-type: none;
 }
 
-.name-all{
-    width: 64px;
-}
-.name-websites{
-    width: 120px;
-}
-.name-app{
-    width: 83px;
-}
-
-.name-design{
-    width: 96px;
-}
-.name-marketing{
-    width: 121px;
-}
-
-.projects__menu>button{
+.button-name{
     font-family: var(--primary-font);
     font-weight: 500;
     font-size: 16px;
     color: var(--black);
+    letter-spacing: 0.03em;
+    margin-right: 8px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    cursor: pointer;
     border-radius: 4px;
     border: none;
+    text-align: center;
+    gap: 8px;
+    
 }
 
-.projects__menu>button:hover{
+.button-name:hover, .button-name:focus{
     background-color: var(--light-blue);
     color: var(--white);
-    border: none;
     box-shadow: 1px 1px 1px var(--dark-white);
     cursor: pointer;
 }
 
-.projects__images{
+
+.projects-container{
     display: flex;
-    flex:1;
-    gap:30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding-left: 215px;
+    max-width: 1200px;
 }
+
+.projects__image{
+    display: flex;}
+
+
 .projects-text{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
     margin-top: 20px;
     padding-bottom: 4px;
     letter-spacing: 0.06em;
     text-align: left;
-
 }
-.projects1-text{
-    padding-bottom: 50px;
-    margin-top: 4px;
-    text-align: left;
 
+.projects1-text{
+    font-size: 16px;
+    color: var(--grey);
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    text-align: left;
+}
+
+.projects-text, .projects1-text{
+    text-align: left;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 /* Footer portflio style*/
 
 .footer{
     background-color: var(--dark-grey);
-    display: flex;
-    justify-content: space-between;
-    padding: 60px 1240px 60px 215px;
-    text-align: start;
+    color: var(--white);
+    display: inline-block;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 215px;
+    height: auto;
+    width: 1200px;
+    align-items: center;
 }
-
 
 .footer__logo{
     font-family: var(--secondary-font);
@@ -560,41 +556,44 @@ a{
     color: var(--white);
     text-decoration: none;
     letter-spacing: 0.03em;
-    align-items: flex-start;
+    text-align: left;
+    margin-top: 60px;
+    margin-bottom: 28px;
+    
 }
 
 .footer__logo__name{
     color: #2196f3;
 
 }
-
-.contact{
-    font-family: var(--primary-font);
+.contacts{
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: var(--white);
-    text-decoration: none;
-    letter-spacing: 0.03em;
-    margin-top: 28px;
-}
-  
-.contact-mail{
-    margin-top:14px;
-    margin-bottom: 12px;
-}
+}  
 
-.contact a{
+.road{
+font-family: var(--primary-font);
+font-weight: 400;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+color: var(--white); 
+padding-top: 28px;
+
+
+}
+.mail, .phone{
+    margin-top: 12px;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
+ 
 }
-.contact a:hover{
+
+.mail:hover, .phone:hover {
     color: var(--light-blue);
 }
 
 
-.contact a:focus{
+.mail:focus, .phone:focus{
     color: var(--light-blue);
     border-bottom: none;
 }
