--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,18 @@ html{
 
 ul{
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 a{
     text-decoration: none;
     color: inherit;
+}
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+    width: 1600px;
 }
 
 .container{
@@ -54,8 +61,10 @@ a{
     border-top: none;
     border-right: none;
     border-left: none;
-    padding: 24px 215px;
+    padding: 24px;
     border-bottom: 1px solid #ececec;
+    align-items: center;
+    width: 1600px;
 
 }
 
@@ -130,9 +139,11 @@ a{
 .hero-section{
     background-color: var(--dark-grey);
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
+    width: 1600px;
 
 }
 
@@ -183,14 +194,16 @@ a{
    align-items: center;
    flex-wrap: wrap;
    gap: 30px;
+   padding-left:215px;
+   padding-right: 215px;
     
 }
 
 .about__list{
     list-style: none;
-
+    margin-right: 30px;
 }
-
+ 
 .about__subtitle{
     font-family: var(--primary-font);
     font-weight: 700;
@@ -201,9 +214,7 @@ a{
     list-style: none;
     letter-spacing: 0.03em;
     text-align: left;
-    margin-top: 94px;
     margin-bottom: 10px;
-    
 
 }
 
@@ -214,26 +225,19 @@ a{
     line-height: 24px;
     color: var(--grey);
     letter-spacing: 0.03em;
-    text-align: left;                                   
-
+    text-align: left;                            
 }
 
 /* What we do style*/
 .occupation{
-    margin: 94px 215px;
+    display: inline-block;
     text-align: center;
     
 }
-.occupation__images{
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    gap:30px;
+.occupation__images> img{
+    margin-right: 30px;
 }
-.occupation__image{
-    width: 370px;
-    height: 294px;
-}
+
 .occupation__subtitle{
     font-family: var(--primary-font);
     font-weight: 700;
@@ -248,14 +252,16 @@ a{
 /* Team section style*/
 
 .team{
-    margin: 94px 215px;
+    margin: 215px;
     display: inline;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-
-.team__subtitle{
+.team > .section{
+    background-color: var(--dark-white);
+}
+.team-subtitle{
     font-family: var(--primary-font);
     font-weight: 700;
     font-size: 36px;
@@ -267,14 +273,15 @@ a{
     
 
 }
-.team__image{
-    width: 270px;
-    height: 260px;
-    display: flex;
-    flex: 1;
+.team-image{
+    display: inline-block;
+    flex-direction: row;
     justify-content: center;
-    gap:30px;
-    
+    text-align: center;
+    margin-right: 30px;
+    border-radius: 4px;
+    background-color: var(--dark-white);
+   
 }
 
 .team__name{
@@ -295,8 +302,6 @@ a{
     color: var(--grey);
     letter-spacing: 0.03em;
     margin-top: 10px;
-    margin-bottom: 30px;
-
 }
 
 /* Footer section style */
@@ -305,13 +310,10 @@ a{
     background-color: var(--dark-grey);
     color: var(--white);
     display: inline-block;
-    justify-content: center;
-    padding-top: 60px;
-    padding-bottom: 60px;
     padding-left: 215px;
+    padding-top: 60px;
     height: auto;
-    width: 1200px;
-    align-items: center;
+    width: 1600px;
    
 }
 
@@ -334,6 +336,7 @@ a{
 }
 .contacts{
     font-style: normal;
+    margin-bottom: 60px;
 }  
 
 .road{
@@ -351,6 +354,7 @@ padding-top: 28px;
     margin-top: 12px;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
+  
  
 }
 
@@ -363,9 +367,6 @@ padding-top: 28px;
     color: var(--light-blue);
     border-bottom: none;
 }
-
-
-
 
 .container{
     width: 1200px;
@@ -390,9 +391,11 @@ padding-top: 28px;
     border-top: none;
     border-right: none;
     border-left: none;
-    padding: 24px 215px;
+    padding: 24px;
     border-bottom: 1px solid #ececec;
-
+    align-items: center;
+    width: 1600px;
+   
 }
 
 .header__logo{
@@ -461,19 +464,28 @@ padding-top: 28px;
 }
 /* Main part website page style*/
 
-.projects__menu{
+.main-section{
+    padding-top: 94px;
+    padding-bottom: 50px;
+    width: 1600px;
+}
+
+.button-menu{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
-    padding-top: 94px;
+    margin-top: 94px;
     list-style-type: none;
 }
 
+
 .button-name{
     font-family: var(--primary-font);
+    background-color: var(--dark-white);
     font-weight: 500;
     font-size: 16px;
+    line-height: 26px;
     color: var(--black);
     letter-spacing: 0.03em;
     margin-right: 8px;
@@ -494,20 +506,35 @@ padding-top: 28px;
     cursor: pointer;
 }
 
-
-.projects-container{
+.portfolio-section{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 30px;
-    padding-left: 215px;
     max-width: 1200px;
+    margin-left: 215px;
 }
 
-.projects__image{
-    display: flex;}
 
+.portfolio-projects{
+    align-content: center;
+}
+
+
+.portfolio-image{
+    display: block;
+}
+
+.portfolio-cards{
+    margin-top: 0px;
+    border-color: #eeeeee;
+    border-width: 1px;
+    border-style: solid;
+    border-top: none;
+    padding: 20px 24px;
+
+}
 
 .projects-text{
     font-weight: 700;
@@ -539,13 +566,11 @@ padding-top: 28px;
     background-color: var(--dark-grey);
     color: var(--white);
     display: inline-block;
-    justify-content: center;
-    padding-top: 60px;
-    padding-bottom: 60px;
     padding-left: 215px;
+    padding-top: 60px;
     height: auto;
-    width: 1200px;
-    align-items: center;
+    width: 1600px;
+    
 }
 
 .footer__logo{
@@ -557,8 +582,7 @@ padding-top: 28px;
     text-decoration: none;
     letter-spacing: 0.03em;
     text-align: left;
-    margin-top: 60px;
-    margin-bottom: 28px;
+   
     
 }
 
@@ -568,6 +592,8 @@ padding-top: 28px;
 }
 .contacts{
     font-style: normal;
+    margin-bottom: 60px;
+
 }  
 
 .road{
@@ -585,7 +611,7 @@ padding-top: 28px;
     margin-top: 12px;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
- 
+   
 }
 
 .mail:hover, .phone:hover {
